# ML-Engineer-Challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  checklist.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  simple plan.md
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 20260713_000001_create_request_logs.py  20260720_000002_create_batch_jobs.py
api/: config.py  database.py  errors.py  main.py  metrics.py  worker.py
api/middleware/: auth.py  request_logging.py
api/models/: api.py  classification.py  model_metadata.py  object_detection.py
api/routers/: classification.py  object_detection.py
api/services/: batch_job_service.py  cache_service.py  request_log_service.py
api/utils/: image_validation.py
docs/: redis-caching.md  technical-readme.md  testing-strategy.md
models/: export_common.py  export_detr_resnet50.py  export_model.py  export_retinanet_resnet50_fpn.py  export_utils.py  export_yolov8n.py  model_config.yaml
models/training/: classification_pipeline.py
monitoring/prometheus/: prometheus.yml
nginx/: default.conf
scripts/: download_datasets.py
scripts/docker/: start_stack.sh
tests/: conftest.py
tests/e2e/: test_stack_smoke.py
tests/integration/: test_api_endpoints.py  test_batch_endpoint.py  test_classification_endpoint.py  test_detect_endpoint.py  test_lifespan.py  test_object_detection_model_selection.py
tests/unit/: test_async_batch_jobs.py  test_auth.py  test_cache_reuse_validation.py  (+14 more)
(+9 files in other folders)
