[project]
name = "ml-engineer-challenge"
version = "0.1.0"
description = "Multi-model computer vision API and MLOps workspace."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "alembic>=1.11.0",
    "celery>=5.3.0",
    "fastapi>=0.100.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0,<1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "prometheus-client>=0.17.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "redis>=4.5.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "structlog>=23.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.20.0",
    "ultralytics>=8.0.0",
    "uvicorn[standard]>=0.23.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "httpx>=0.24.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[tool.uv]
default-groups = ["dev"]
package = false
